@@ -1,3 +1,5 @@
+2013-12-23
+	1. After reset wait timer not set. Fix regression due to previous change.
 2013-12-11
 	1. Increase ATR wait timer to 2000 ms. (for old slow cards).
 2013-12-02
